# TrialGPT

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: README.md  main.py
clinical_rag/: __init__.py  config.py  judge.py  query_parser.py  retrieval.py
clinical_rag/prompts/: judge_prompt.py  query_parser_prompt.py
eval/: README.md  generate_gold.py  generate_judge.py  judge_eval.ipynb  judge_eval.qmd  main.py  retrieval_eval.ipynb  retrieval_eval.qmd
ingest/: README.md  __init__.py  ctgov_client.py  main.py
tests/: test_qdrant_integration.py  test_query_parser.py
